2007-05-25  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: 
	* src/de/schlund/pfixcore/util/ImportText.java: new tools to dump and 
	import used include parts 
	* projects/dumptext.sh:
	* projects/importtext.sh: use the tools above.

2007-05-14  Martin Leidig  <mleidig@schlund.de>

	Fixed race condition in iframe fallback handling.
	Changed fallback HTML element names to allow simultaneous
	usage of both request implementations:

	* projects/core/script/httpRequest.js
	* projects/core/script/xmlRequest.js

	Added service request dumping support (especially for 
	improved, more verbose, exception reporting).

	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java
	* src/de/schlund/pfixcore/webservice/ServiceRequest.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/HttpServiceRequest.java
	* src/de/schlund/pfixcore/webservice/ServiceRequestWrapper.java

2007-05-14  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/DerefServlet.java (handleLink): 
	Added code that does a javascript redirect in case the HTTP refresh
	redirect does not work (ugly IE7-workaround).

2007-05-11  Martin Leidig  <mleidig@schlund.de>

	Enable native XMLHttpRequest usage by default for Opera (instead
	of iframe fallback), because current versions don't have problems
	any longer.

	* projects/core/script/httpRequest.js
	* projects/core/script/xmlRequest.js

2007-05-09  Martin Leidig  <mleidig@schlund.de>

	Fixed "Cookie setting problem with reused SPDocuments". Cookies still
	aren't set at responses based on a reused DOM, but now they're set at
	error responses (including 302 status responses) too.

	* src/de/schlund/pfixxml/AbstractXMLServer.java: Set cookies on error
	responses.

2007-05-08  Martin Leidig  <mleidig@schlund.de>

	Fixed "multiple getWriter() call problem", which could occur when an 
	exception is thrown during the writing of a JSON response, which in