@@ -19,6 +19,34 @@
 
 package de.schlund.pfixxml;
 
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.nio.charset.Charset;
+import java.text.NumberFormat;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.Map;
+import java.util.Properties;
+import java.util.TreeSet;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import javax.servlet.ServletConfig;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletException;
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+
+import org.apache.log4j.Category;
+import org.xml.sax.SAXException;
+
 import de.schlund.pfixxml.config.ServletManagerConfig;
 import de.schlund.pfixxml.config.XMLPropertiesUtil;
 import de.schlund.pfixxml.exceptionprocessor.ExceptionConfig;
@@ -30,32 +58,6 @@ import de.schlund.pfixxml.serverutil.SessionAdmin;
 import de.schlund.pfixxml.serverutil.SessionHelper;
 import de.schlund.pfixxml.serverutil.SessionInfoStruct;
 import de.schlund.pfixxml.util.MD5Utils;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.nio.charset.Charset;
-import java.text.NumberFormat;
-import java.text.SimpleDateFormat;
-import java.util.Date;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.Hashtable;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.Map;
-import java.util.Properties;
-import java.util.TreeSet;
-import java.util.concurrent.atomic.AtomicInteger;
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-import org.apache.log4j.Category;
-import org.xml.sax.SAXException;
 
 
 /**
@@ -96,7 +98,7 @@ public abstract class ServletManager extends HttpServlet {
     private SessionAdmin     sessionadmin                 = SessionAdmin.getInstance();
     private Category         LOGGER_VISIT                 = Category.getInstance("LOGGER_VISIT");
     private Category         CAT                          = Category.getInstance(ServletManager.class);
-    private Map              exceptionConfigs             = new Hashtable();
+    private Map<Class,ExceptionConfig>              exceptionConfigs             = new HashMap<Class,ExceptionConfig>();
     private long             common_mtime                 = 0;
     private long             servlet_mtime                = 0;
     private long             loadindex                    = 0;
@@ -880,7 +882,7 @@ public abstract class ServletManager extends HttpServlet {
             process(preq, res);
         } catch (Throwable e) {
             CAT.error("Exception in process", e);
-            ExceptionConfig exconf = getExceptionConfigForThrowable(e);
+            ExceptionConfig exconf = getExceptionConfigForThrowable(e.getClass());
          
             if(exconf != null && exconf.getProcessor()!= null) { 
                 if ( preq.getLastException() == null ) {  
@@ -900,23 +902,13 @@ public abstract class ServletManager extends HttpServlet {
      * @throws ServletException
      * @throws ClassNotFoundException
      */
-    private ExceptionConfig getExceptionConfigForThrowable(Throwable th) throws ServletException {
-        for(Iterator iter = exceptionConfigs.keySet().iterator(); iter.hasNext(); ) {
-            String key = (String) iter.next();
-            //TODO: avoid frequent creation of temporary class objects 
-            Class clazz;
-            try {
-                clazz = Class.forName(key);
-            } catch (ClassNotFoundException e) {
-                CAT.error(e);
-                throw new ServletException("Unable to instantiate class: "+key, e);
-            }
-            if (clazz.isInstance(th)) {
-                // bingo
-                return (ExceptionConfig) exceptionConfigs.get(key);
-            }
-        }    
-        return null;
+    private ExceptionConfig getExceptionConfigForThrowable(Class clazz) throws ServletException {
+        ExceptionConfig exConf=null;
+        if(clazz!=null) {
+            exConf=exceptionConfigs.get(clazz);
+            if(exConf==null) exConf=getExceptionConfigForThrowable(clazz.getSuperclass());
+        }
+        return exConf;
     }
     
     /**
@@ -928,7 +920,7 @@ public abstract class ServletManager extends HttpServlet {
      * is somehow invalid
      */
     private void initExceptionConfigs() throws ServletException {
-        Map tmpExConf = new HashMap();
+        Map<String,ExceptionConfig> tmpExConf = new HashMap<String,ExceptionConfig>();
         int len = PROP_EXCEPTION.length();
         
         Properties properties = this.getServletManagerConfig().getProperties();
@@ -998,8 +990,14 @@ public abstract class ServletManager extends HttpServlet {
             ExceptionConfig exConfig = (ExceptionConfig) values.next();
             if (exConfig.validate() == false)
                 throw new ServletException("INVALID ExceptionConfig: \n"+ exConfig);
-            else
-                exceptionConfigs.put(exConfig.getType(), exConfig);
+            else {
+                try {
+                    Class clazz=Class.forName(exConfig.getType());
+                    exceptionConfigs.put(clazz, exConfig);
+                } catch(ClassNotFoundException x) {
+                    throw new ServletException("Can't find exception class: "+exConfig.getType());
+                }
+            }
         }
         
         if (CAT.isDebugEnabled()) {
